# trace-har

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  USER_GUIDE.md
src/trace_har/: cli.py  converter.py  source.py
tests/: test_converter.py
tests/fixtures/sample_trace/: trace.network  trace.trace
